Update to appindicator based on JDK 21