@@ -1,6 +1,5 @@
 package org.cryptomator.linux.tray;
 
-import org.apache.commons.lang3.StringUtils;
 import org.cryptomator.integrations.common.CheckAvailability;
 import org.cryptomator.integrations.common.OperatingSystem;
 import org.cryptomator.integrations.common.Priority;
@@ -16,7 +15,6 @@ import org.purejava.appindicator.NativeLibUtilities;
 
 import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Consumer;
@@ -30,7 +28,7 @@ public class AppindicatorTrayMenuController implements TrayMenuController {
 	private static final String APP_INDICATOR_ID = "org.cryptomator.Cryptomator";
 	private static final String SVG_SOURCE_PROPERTY = "cryptomator.integrationsLinux.trayIconsDir";
 
-	private static final SegmentScope SCOPE = SegmentScope.global();
+	private static final Arena ARENA = Arena.global();
 	private MemorySegment indicator;
 	private MemorySegment menu = gtk_menu_new();
 	private Optional<String> svgSourcePath;
@@ -49,7 +47,7 @@ public class AppindicatorTrayMenuController implements TrayMenuController {
 	}
 
 	private void showTrayIconWithSVG(String s) {
-		try (var arena = Arena.openConfined()) {
+		try (var arena = Arena.ofConfined()) {
 			svgSourcePath = Optional.ofNullable(System.getProperty(SVG_SOURCE_PROPERTY));
 			// flatpak
 			if (svgSourcePath.isEmpty()) {
@@ -74,7 +72,7 @@ public class AppindicatorTrayMenuController implements TrayMenuController {
 	}
 
 	private void updateTrayIconWithSVG(String s) {
-		try (var arena = Arena.openConfined()) {
+		try (var arena = Arena.ofConfined()) {
 			app_indicator_set_icon(indicator, arena.allocateUtf8String(s));
 		}
 	}
@@ -97,11 +95,11 @@ public class AppindicatorTrayMenuController implements TrayMenuController {
 			switch (item) {
 				case ActionItem a -> {
 					var gtkMenuItem = gtk_menu_item_new();
-					try (var arena = Arena.openConfined()) {
+					try (var arena = Arena.ofConfined()) {
 						gtk_menu_item_set_label(gtkMenuItem, arena.allocateUtf8String(a.title()));
 						g_signal_connect_object(gtkMenuItem,
 								arena.allocateUtf8String("activate"),
-								GCallback.allocate(new ActionItemCallback(a), SCOPE),
+								GCallback.allocate(new ActionItemCallback(a), ARENA),
 								menu,
 								0);
 					}
@@ -114,7 +112,7 @@ public class AppindicatorTrayMenuController implements TrayMenuController {
 				case SubMenuItem s -> {
 					var gtkMenuItem = gtk_menu_item_new();
 					var gtkSubmenu = gtk_menu_new();
-					try (var arena = Arena.openConfined()) {
+					try (var arena = Arena.ofConfined()) {
 						gtk_menu_item_set_label(gtkMenuItem, arena.allocateUtf8String(s.title()));
 					}
 					addChildren(gtkSubmenu, s.items());
